crates/compiler/semantic/src/validation/tests/snapshots/cairo_m_compiler_semantic__validation__tests__basic_scope_visibility_diagnostics.snap
---
source: crates/compiler/semantic/src/validation/tests/mod.rs
expression: snapshot_content
---
Fixture: basic_scope_visibility.cm
============================================================
Source code:
func test() {
    let outer = 1;
    {
        let inner = outer; // OK: outer is visible
    }
    let bad = inner; // Should error: Undeclared variable 'inner'
    return();
}

============================================================
Found 3 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'inner'
   ╭─[ basic_scope_visibility.cm:6:15 ]
   │
 6 │     let bad = inner; // Should error: Undeclared variable 'inner'
   │               ──┬──  
   │                 ╰──── Undeclared variable 'inner'
───╯

--- Diagnostic 2 ---
[1002] Warning: Unused variable 'bad'
   ╭─[ basic_scope_visibility.cm:6:9 ]
   │
 6 │     let bad = inner; // Should error: Undeclared variable 'inner'
   │         ─┬─  
   │          ╰─── Unused variable 'bad'
───╯

--- Diagnostic 3 ---
[1002] Warning: Unused variable 'inner'
   ╭─[ basic_scope_visibility.cm:4:13 ]
   │
 4 │         let inner = outer; // OK: outer is visible
   │             ──┬──  
   │               ╰──── Unused variable 'inner'
───╯
